// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children props 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F6D7A",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View />
</RCTSafeAreaView>
`;

exports[`uses the specified background color if provided 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F6D7A",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
